@@ -28,7 +28,7 @@ import json
 import logging
 import requests
 
-from datetime import datetime, timedelta
+from datetime import timedelta
 from django.conf import settings
 from django.utils import timezone
 from toolkit.api_parser.api_parser import ApiParser
@@ -190,61 +190,64 @@ class HarfangLabParser(ApiParser):
         return json.dumps(log)
 
     def execute(self):
-        since = self.last_api_call or (timezone.now() - timedelta(days=7))
-        # Don't get the last 2 minutes of logs, as some can appear delayed at the API
-        to = min(timezone.now() - timedelta(minutes=10), since + timedelta(hours=24))
-
         for log_type in ["alerts", "threats"]:
-            index = 0
-            total = 1
-            logs = list()
+            try:
+                since = self.last_collected_timestamps.get(log_type, self.last_api_call) or (timezone.now() - timedelta(days=7))
+                # Don't get the last 10 minutes of logs, as some can appear delayed at the API
+                to = min(timezone.now() - timedelta(minutes=10), since + timedelta(hours=24))
 
-            msg = f"{log_type}: parser starting from {since} to {to}."
-            logger.info(f"[{__parser__}]:execute: {msg}", extra={'frontend': str(self.frontend)})
+                index = 0
+                total = 1
+                logs = list()
 
-            while index < total:
-                get_func = getattr(self, f"get_{log_type}")
-                response = get_func(since, to, index)
+                msg = f"{log_type}: parser starting from {since} to {to}."
+                logger.info(f"[{__parser__}]:execute: {msg}", extra={'frontend': str(self.frontend)})
 
-                # Downloading may take some while, so refresh token in Redis
+                while index < total:
+                    get_func = getattr(self, f"get_{log_type}")
+                    response = get_func(since, to, index)
+
+                    # Downloading may take some while, so refresh token in Redis
+                    self.update_lock()
+
+                    logs += response['results']
+
+                    total = int(response['count'])
+                    msg = f"{log_type}: got {total} lines available"
+                    logger.debug(f"[{__parser__}]:execute: {msg}", extra={'frontend': str(self.frontend)})
+
+                    if total == 0:
+                        """
+                        Means that there are no logs available. It may be for two
+                        reasons: no log during this period or logs not available at
+                        request time. If there are no logs, no need to write them.
+                        """
+                        break
+
+                    if total >= 10000:
+                        """
+                        API have a return threshold set to 10k logs by default (maybe elastic underlying layer)
+                        for every server response. This leads to an infinite loop in case of a large volume returned
+                        on the requested time range (mostly ~0.001eps but spikes can be much larger)
+                        """
+                        msg = f"{log_type}: retrieved {total} lines >= 10k logs, shortening time range to avoid API error"
+                        logger.info(f"[{__parser__}]:execute: {msg}", extra={'frontend': str(self.frontend)})
+                        to -= (to - since)/2
+                        index = 0
+                        logs = list()
+                        continue
+
+                    index += len(logs)
+                    msg = f"{log_type}: retrieved {index} lines"
+                    logger.debug(f"[{__parser__}]:execute: {msg}", extra={'frontend': str(self.frontend)})
+
+                self.write_to_file([self.format_log(l, log_type) for l in logs])
+                # Writting may take some while, so refresh token in Redis
                 self.update_lock()
 
-                logs += response['results']
+                self.last_collected_timestamps[log_type] = to
 
-                total = int(response['count'])
-                msg = f"{log_type}: got {total} lines available"
-                logger.debug(f"[{__parser__}]:execute: {msg}", extra={'frontend': str(self.frontend)})
-
-                if total == 0:
-                    """
-                    Means that there are no logs available. It may be for two
-                    reasons: no log during this period or logs not available at
-                    request time. If there are no logs, no need to write them.
-                    """
-                    break
-
-                if total >= 10000:
-                    """
-                    API have a return threshold set to 10k logs by default (maybe elastic underlying layer)
-                    for every server response. This leads to an infinite loop in case of a large volume returned
-                    on the requested time range (mostly ~0.001eps but spikes can be much larger)
-                    """
-                    msg = f"{log_type}: retrieved {total} lines >= 10k logs, shortening time range to avoid API error"
-                    logger.info(f"[{__parser__}]:execute: {msg}", extra={'frontend': str(self.frontend)})
-                    to -= (to - since)/2
-                    index = 0
-                    logs = list()
-                    continue
-
-                index += len(logs)
-                msg = f"{log_type}: retrieved {index} lines"
-                logger.debug(f"[{__parser__}]:execute: {msg}", extra={'frontend': str(self.frontend)})
-
-            self.write_to_file([self.format_log(l, log_type) for l in logs])
-            # Writting may take some while, so refresh token in Redis
-            self.update_lock()
-
-        self.frontend.last_api_call = to
-        self.frontend.save()
+            except Exception as e:
+                logger.error(f"[{__parser__}]:execute: Parsing error for type \"{log_type}\": {e}", extra={'frontend': str(self.frontend)})
 
         logger.info(f"[{__parser__}]:execute: Parsing done.", extra={'frontend': str(self.frontend)})
